--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "homepage": "https://mariusz-smajdor.github.io/todo-list-react/",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^3.2.3",
+    "install": "^0.13.0",
+    "npm": "^8.5.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
