--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "npm": "^8.5.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
